# aws-ai-governance-operations-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: aws_architecture_mapping.yaml  cost_thresholds.yaml  governance_config.yaml  policy_checks.yaml  risk_scoring.yaml
docs/: architecture.md  architecture_diagram.md  aws_architecture.md  aws_implementation_roadmap.md  aws_service_mapping.md  cv_bullets.md  evidence_flow.md  final_checklist.md  github_topics.md  governance_workflow.md  interview_talking_points.md  linkedin_summary.md  operational_workflow.md  portfolio_summary.md  roadmap.md  runbook.md
policies/: ai_governance_policy.md  incident_response_policy.md  model_approval_policy.md  responsible_ai_review.md
scripts/: run_all_local.sh
tests/: __init__.py  test_access_review_logic.py  test_access_review_runner.py  test_access_review_schema.py  test_architecture_docs.py  test_audit_runner.py  test_audit_schema.py  test_aws_architecture_mapping.py  test_cost_checks.py  test_cost_runner.py  test_cost_schema.py  test_export_access_review.py  test_export_audit_events.py  test_export_costs.py  test_export_incidents.py  test_export_inventory.py  test_export_model_cards.py  test_export_monitoring.py  test_export_policy_findings.py  test_export_reports.py  test_export_risk_register.py  test_export_risk_scores.py  test_generate_access.py  test_generate_audit_events.py  test_generate_costs.py  test_generate_incidents.py  test_generate_inventory.py  test_generate_model_cards.py  test_generate_monitoring.py  test_generate_reports.py  (+21 more)
(+69 files in other folders)
