[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-ai-governance-operations-platform"
version = "0.1.0"
description = "Local-first foundation for an AWS-oriented AI governance and operations platform."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Portfolio Project" }
]
dependencies = [
  "pandas",
  "numpy",
  "pyyaml",
  "pydantic",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
